--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "bootstrap.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -95,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
